@@ -11073,6 +11073,38 @@
           4,
           1,
           5,
+          206
+        ]
+      },
+      {
+        "code": 322,
+        "indent": 1,
+        "parameters": [
+          1,
+          "Boss1",
+          0,
+          "Boss1",
+          0,
+          "Boss1_1"
+        ]
+      },
+      {
+        "code": 0,
+        "indent": 1,
+        "parameters": []
+      },
+      {
+        "code": 412,
+        "indent": 0,
+        "parameters": []
+      },
+      {
+        "code": 111,
+        "indent": 0,
+        "parameters": [
+          4,
+          1,
+          5,
           120
         ]
       },
@@ -11230,6 +11262,38 @@
           4,
           2,
           5,
+          207
+        ]
+      },
+      {
+        "code": 322,
+        "indent": 1,
+        "parameters": [
+          2,
+          "Evil1",
+          3,
+          "Evil1",
+          11,
+          "Evil1_4"
+        ]
+      },
+      {
+        "code": 0,
+        "indent": 1,
+        "parameters": []
+      },
+      {
+        "code": 412,
+        "indent": 0,
+        "parameters": []
+      },
+      {
+        "code": 111,
+        "indent": 0,
+        "parameters": [
+          4,
+          2,
+          5,
           121
         ]
       },
@@ -11365,6 +11429,38 @@
           4,
           3,
           5,
+          208
+        ]
+      },
+      {
+        "code": 322,
+        "indent": 1,
+        "parameters": [
+          3,
+          "Elemental",
+          0,
+          "Elemental",
+          0,
+          "Elemental_1"
+        ]
+      },
+      {
+        "code": 0,
+        "indent": 1,
+        "parameters": []
+      },
+      {
+        "code": 412,
+        "indent": 0,
+        "parameters": []
+      },
+      {
+        "code": 111,
+        "indent": 0,
+        "parameters": [
+          4,
+          3,
+          5,
           122
         ]
       },
@@ -11481,6 +11577,38 @@
           "Actor4",
           3,
           "Actor4_4"
+        ]
+      },
+      {
+        "code": 0,
+        "indent": 1,
+        "parameters": []
+      },
+      {
+        "code": 412,
+        "indent": 0,
+        "parameters": []
+      },
+      {
+        "code": 111,
+        "indent": 0,
+        "parameters": [
+          4,
+          4,
+          5,
+          209
+        ]
+      },
+      {
+        "code": 322,
+        "indent": 1,
+        "parameters": [
+          4,
+          "Bandito",
+          0,
+          "Bandito",
+          0,
+          "Bandito_1"
         ]
       },
       {
