@@ -644,7 +644,7 @@
     ],
     "gold": 300,
     "name": "Four-Toed Kevin",
-    "note": "<Armor Weakness: Slashing>\n\n<Sideview Battler: Bandito_1>\n<Sideview No Collapse>\n<Weapon Image: 1>\n<Attack Animation: 6>\n<HP Gauge Width: 216>\n\n<Boost Skill 15: Full>\n<Boost Skill 18: Full>\n<AI Priority>\nUser HP% param <= 10%: Backstab, Lowest DEF\n\nState !== Foresight +++ User HP% param >= 30%: Foresight, User\nState !== Sharpened Dagger +++ User HP% param >= 30%: Sharpen Dagger, User\n\nTroop Alive Members > 1 +++ State !== Inspired: Inspire, First\nTroop Alive Members > 1 +++ Random 50%: Guard, User\n</AI Priority>\n\n<Enemy Drops>\nBell: 5%\nScrap of Kevin's Cape: 100%\nBandito Dagger: 12.5%\nBandito Cloak: 12.5%\nBandito Gloves: 12.5%\nEnchanted Anti-Magic Charm: 5%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Slashing>\n\n<Sideview Battler: Bandito_1>\n<Sideview No Collapse>\n<Weapon Image: 1>\n<Attack Animation: 6>\n<HP Gauge Width: 216>\n\n<Boost Skill 15: Full>\n<Boost Skill 18: Full>\n<AI Priority>\nUser HP% param <= 10%: Backstab, Lowest DEF\n\nState !== Foresight +++ User HP% param >= 30%: Foresight, User\nState !== Sharpened Dagger +++ User HP% param >= 30%: Sharpen Dagger, User\n\nTroop Alive Members > 1 +++ State !== Inspired: Inspire, First\nTroop Alive Members > 1 +++ Random 50%: Guard, User\n</AI Priority>\n\n<Enemy Drops>\nBell: 5%\nScrap of Kevin's Cape: 100%\nLeader Outfit: 100%\nBandito Dagger: 12.5%\nBandito Cloak: 12.5%\nBandito Gloves: 12.5%\nEnchanted Anti-Magic Charm: 5%\n</Enemy Drops>",
     "params": [
       1200,
       200,
@@ -1092,7 +1092,7 @@
     ],
     "gold": 600,
     "name": "Laeryidyean",
-    "note": "<Armor Weakness: Bludgeoning>\n<Element: Dark>\n<Passive State: 57, 136, 137, 141>\n\n<Sideview Battler: Boss1_1>\n<Weapon Image: 2>\n<Attack Animation: 6>\n<HP Gauge Width: 288>\n\n<Boost Skill 60: Full>\n<AI Priority>\nState === Weak Point +++ User HP% param >= 50%: Purify, User\nState !== Magic Enhance +++ User HP% param >= 50%: Magic Enhance, User\n</AI Priority>\n\n<Enemy Drops>\nMusic Box: 5%\nLaeryidyean's Skull: 100%\nLaeryidyean's Strength: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Bludgeoning>\n<Element: Dark>\n<Passive State: 57, 136, 137, 141>\n\n<Sideview Battler: Boss1_1>\n<Weapon Image: 2>\n<Attack Animation: 6>\n<HP Gauge Width: 288>\n\n<Boost Skill 60: Full>\n<AI Priority>\nState === Weak Point +++ User HP% param >= 50%: Purify, User\nState !== Magic Enhance +++ User HP% param >= 50%: Magic Enhance, User\n</AI Priority>\n\n<Enemy Drops>\nMusic Box: 5%\nLaeryidyean's Skull: 100%\nLaeryidyean's Strength: 100%\nSkeletal Outfit: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\n</Enemy Drops>",
     "params": [
       4000,
       800,
@@ -1172,7 +1172,7 @@
     ],
     "gold": 200,
     "name": "Water Elemental",
-    "note": "<Element: Water>\n<Passive State: 136, 146>\n\n<Sideview Battler: Elemental_1>\n<Attack Animation: 82>\n<HP Gauge Width: 216>\n\n<Boost Skill 36: At Most 1>\n<AI Priority>\nState !== Soaked +++ Random 50% +++ User HP% param <= 90% +++ User HP% param > 25%: Bubble\nUser HP% param <= 50% +++ User HP% param > 15% +++ Random 25%: Pure Water, User\n</AI Priority>\n\n<Enemy Drops>\nWater Elemental's Pure Water: 100%\nWater Elemental's Flow: 100%\nBubble (Tome): 100%\nAqua Gem: 100%\nWater Essence: 100%\nWater Essence: 100%\nWater Essence: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\n</Enemy Drops>",
+    "note": "<Element: Water>\n<Passive State: 136, 146>\n\n<Sideview Battler: Elemental_1>\n<Attack Animation: 82>\n<HP Gauge Width: 216>\n\n<Boost Skill 36: At Most 1>\n<AI Priority>\nState !== Soaked +++ Random 50% +++ User HP% param <= 90% +++ User HP% param > 25%: Bubble\nUser HP% param <= 50% +++ User HP% param > 15% +++ Random 25%: Pure Water, User\n</AI Priority>\n\n<Enemy Drops>\nWater Elemental's Pure Water: 100%\nWater Elemental's Flow: 100%\nWatery Outfit: 100%\nBubble (Tome): 100%\nAqua Gem: 100%\nWater Essence: 100%\nWater Essence: 100%\nWater Essence: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\nWater Bottle: 100%\n</Enemy Drops>",
     "params": [
       2400,
       999,
@@ -1957,7 +1957,7 @@
     ],
     "gold": 900,
     "name": "The Warden",
-    "note": "<Armor Weakness: Slashing>\n<Element: Dark>\n<Passive State: 57>\n\n<Sideview Battler: Evil1_4>\n<Weapon Image: 229>\n<Attack Animation: 6>\n<HP Gauge Width: 216>\n\n\n<AI Priority>\nState === Bleeding +++ User HP% param >= 33%: Purify, User\nState === Poisoned +++ User HP% param >= 33%: Purify, User\n</AI Priority>\n\n<Enemy Drops>\nThe Warden's Trade-off: 100%\nThe Warden's Belt: 100%\nShadowplate Armor: 100%\nPhantasmal Robes: 100%\nPrayer Vestments ★: 100%\nShadowspec Leathers: 100%\nPhantasmal Scarf: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Slashing>\n<Element: Dark>\n<Passive State: 57>\n\n<Sideview Battler: Evil1_4>\n<Weapon Image: 229>\n<Attack Animation: 6>\n<HP Gauge Width: 216>\n\n\n<AI Priority>\nState === Bleeding +++ User HP% param >= 33%: Purify, User\nState === Poisoned +++ User HP% param >= 33%: Purify, User\n</AI Priority>\n\n<Enemy Drops>\nThe Warden's Trade-off: 100%\nThe Warden's Belt: 100%\nShadowplate Armor: 100%\nPhantasmal Robes: 100%\nPrayer Vestments ★: 100%\nShadowspec Leathers: 100%\nPhantasmal Scarf: 100%\nAncient Outfit: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\n</Enemy Drops>",
     "params": [
       7500,
       999,
