@@ -176,7 +176,7 @@ Additions:
    > [REDACTED TEAR]
    > [REDACTED WING]
    > [REDACTED CHIP]
- - 113 pieces of equipment:
+ - 117 pieces of equipment:
   ~ 20 weapons:
    > Steel Hammer
    > Steel Knuckles
@@ -298,8 +298,12 @@ Additions:
    > [REDACTED SPIRIT]
    > [REDACTED SYNERGY]
    > [REDACTED SYNERGY]
-  ~ 5 vanities:
+  ~ 9 vanities:
    > Bandito Outfit
+   > Skeletal Outfit
+   > Ancient Outfit
+   > Watery Outfit
+   > Leader Outfit
    > Cavalier Outfit
    > Sorcerer Outfit
    > Bishop Outfit
